# mmstructlib

./: LICENSE  README.md  requirements.txt  setup.py
mmstructlib/: __init__.py  cli.py
src/: CMakeLists.txt  Makefile.am
src/alpha_shapes/: alpha_shape_area.hpp  alpha_shape_container.hpp  alpha_shape_weighted_area.hpp  alpha_shapes.hpp  calc_angles.hpp  cayley_menger_matrix.hpp  cgal_typedefs.hpp  create_alpha_shape.hpp  edge_data.hpp  edge_data_container.hpp  evaluate_edge_area.hpp  evaluate_facet_area.hpp  evaluate_vertex_area.hpp  facet_idxs.hpp  find_vertex_index.hpp  half_triangular.hpp  init_angles.hpp  init_edge_data.hpp  pointAreas.cpp  pointComplex.cpp  pointWindow.cpp  point_transform_function.hpp  process_cell.hpp  process_cells.hpp  process_edge.hpp  process_facet.hpp  sqr.hpp  vertex_data.hpp  weight_data.hpp  weight_func_obj_base.hpp  weight_func_obj_default.hpp  weight_func_obj_min.hpp  weight_func_obj_mult.hpp
src/alpha_shapes/data/: get_struct_data.py
src/alpha_shapes/doc/: AreaEquations.lyx  AreaEquationsProbs.lyx  CayleyMengerMinors.lyx
src/alpha_shapes/inex_unfinished/: CGAL_point_transform_function.hpp  alpha_shape_area.cpp  alpha_shapes.cpp  alpha_shapes.hpp  angles.hpp  area_metrics.hpp  cayley_menger_matrix.hpp  cell_data.hpp  points.hpp  process_cell.hpp  process_edge.hpp  process_facet.hpp  test.cpp
src/cif/: Makefile.am  block.hpp  check_optional.hpp  common.hpp  error_handler.hpp  file.hpp  lexer.hpp  ostream.hpp  ostream_debug.cpp  ostream_debug.hpp  parse.hpp  parse_err_msg.hpp  parser.hpp  save.hpp  static_parser.hpp  table.hpp
src/cif/fusion/: block.hpp  file.hpp  save.hpp  table.hpp
src/cif_python/: CMakeLists.txt  block.cpp  cell.cpp  common.hpp  expose_optional.hpp  file.cpp  module.cpp  parse.cpp  save.cpp  string_optional.cpp  table.cpp  vector_block.cpp  vector_cell.cpp  vector_save.cpp  vector_string.cpp  vector_table.cpp
src/nsc/: cassert.h  module.cpp  nsc.c  nsc.h  nsc_weighted.c
src/sample/: CMakeLists.txt  lexer_file_iterator.cpp  lexer_file_iterator.hpp  lexer_file_keywords.hpp  lexer_test.hpp  lexer_test_parser.hpp  testLexer.cxx  testLexerFile.cxx  testParserFile.cxx
src/sginfo_python/: module.cpp  sg_info.cpp  sg_info.hpp
src/util/: join.hpp
test/: mmstructlib_IO_cif_build.py  mmstructlib_IO_cif_build_structures.py  mmstructlib_IO_cif_get_model_atoms.py  mmstructlib_IO_cif_get_seq_atom_res.py  mmstructlib_IO_cif_parser.py  mmstructlib_crystal_lattice.py  mmstructlib_crystal_unit_cell.py  mmstructlib_model_core_Atom.py  mmstructlib_model_core_MultiOccAtom.py  mmstructlib_model_xray_Assembly.py  mmstructlib_model_xray_AssemblyOperator.py  mmstructlib_model_xray_UnitCell.py  mmstructlib_sas_nsc.py  mmstructlib_util_double_linked_hierarchy.py
(+49 files in other folders)
